WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
243658
Non-unified build fixes, earlyish August 2022 edition
https://bugs.webkit.org/show_bug.cgi?id=243658
Summary
Non-unified build fixes, earlyish August 2022 edition
Adrian Perez
Reported
2022-08-08 02:18:16 PDT
Second round of the month.
Attachments
Add attachment
proposed patch, testcase, etc.
Adrian Perez
Comment 1
2022-08-08 02:22:06 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/2896
Adrian Perez
Comment 2
2022-08-08 02:23:48 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/3101
EWS
Comment 3
2022-08-08 03:59:44 PDT
Committed
253205@main
(5309a1f2de7d): <
https://commits.webkit.org/253205@main
> Reviewed commits have been landed. Closing PR #3101 and removing active labels.
Radar WebKit Bug Importer
Comment 4
2022-08-08 04:00:19 PDT
<
rdar://problem/98310074
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug