Non-unified build fixes, earlyish August 2022 edition https://bugs.webkit.org/show_bug.cgi?id=243658

Unreviewed non-unified build fixes.

* Source/WebCore/Modules/compression/CompressionStreamEncoder.h: Add
  missing wtf/ExceptionOr.h header inclusion, remove the redundant
  wtf/text/WTFString.h one.
* Source/WebCore/Modules/compression/DecompressionStreamDecoder.h:
  Ditto.
* Source/WebCore/css/MediaQueryList.cpp: Add missing
  HTMLFrameOwnerElement.h and MediaQuery.h header inclusions.
* Source/WebCore/css/StyleMedia.cpp: Add missing
  JavaScriptCore/ConsoleMessage.h header inclusion.
* Source/WebCore/page/ContextMenuController.cpp: Add missing
  HTMLFrameOwnerElement.h header inclusion.
* Source/WebCore/rendering/svg/RenderSVGTextPath.cpp: Add missing
  RenderLayer.h header inclusion.
* Source/WebCore/style/StyleScopeRuleSets.h: Move forward declaration of
  WebCore::Style::CascadeLevel inside its corresponding namespace.

Canonical link: https://commits.webkit.org/253205@main