Source/WebCore/css/MediaQueryList.cpp
@@ -22,6 +22,8 @@
 
 #include "AddEventListenerOptions.h"
 #include "EventNames.h"
+#include "HTMLFrameOwnerElement.h"
+#include "MediaQuery.h"
 #include "MediaQueryListEvent.h"
 #include <wtf/IsoMallocInlines.h>
 
